# gtm-outreach-agent-template

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
Profile.example/: narrative.md  past_drafts.md  proof_points.md  resume.md  thread_drafts.md  thread_followups.md  thread_voice.md  voice.md  voice_config.yaml
docs/: MAINTAINERS.md  PHASE2.md  SETUP.md
docs/plans/: 2026-05-30-reply-intelligence-implementation.md
docs/specs/: 2026-05-30-reply-intelligence-design.md
launchd/: com.gtm-outreach-agent.plist.template
scripts/: pre_publish_scan.py  verify_parse_job.py
scripts/git-hooks/: pre-push
src/: apply.py  loop.py
src/lib/: classify.py  config.py  doctor.py  draft_outreach.py  find_contacts.py  followups.py  gmail.py  google_auth.py  init_flow.py  models.py  notify.py  ooo.py  parse_job.py  parse_post.py  profile.py  profile_scaffold.py  reply_drafts.py  run_state.py  scheduling.py  send_detect.py  sheets.py  url_classify.py  voice_rules.py
src/prompts/: draft_email.md  infer_titles.md  parse_job.md
tests/: conftest.py  test_apply_pipeline.py  test_classify.py  test_config_step7.py  test_draft_outreach.py  test_find_contacts.py  test_followups.py  test_gmail.py  test_loop.py  test_ooo.py  test_parse_job.py  test_parse_post.py  test_pre_publish_scan.py  test_profile.py  test_reply_drafts.py  test_run_state.py  test_scheduling.py  test_send_detect.py  test_sheets.py  test_url_classify.py  test_voice_rules.py
tests/fixtures/: li_post_locked.html  li_post_og_only.html  (+2 more)
(+2 files in other folders)
